@@ -4,6 +4,7 @@ version = "0.4.1"
 n_workers = 1 # number of games played in parallel; note that the actual number of used cores might be higher depending on how the games are implemented
 n_players = 2 # number of players in a game, you only need to change that if your game is not 1v1
 selfplay_check = false # if true, when you add a bot, it's going to play a game against itself to check if it's working properly
+skip_errors = false # if true, the games that end up with errors are going to be skipped when calculating the ranking (useful if you're worried that random time outs might affect the rankings)
 
 # [MATCHMAKING]
 mm_min_matches = 200 
